# clf

./: pyproject.toml
dev/: preprocess.py  script.py  test.py  train.py  visualize.py
dev/config/: default.toml  settings.py
dev/data/: dataset.py
dev/dataset/: pointcloud.py
dev/model/: classifier.py  loss.py  regressor.py
dev/training/: loop.py  loss.py
src/reco/: SpacePointDataLoader.py  __init__.py  cli.py  pointnet_reg_mod_huber.py  pointnet_utils.py  provider.py
