[project]
name = "reco"
version = "0.1.0"
description = "Vertex reconstruction for the ALPHA-g experiment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.13.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]

[project.scripts]
reco = "reco.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
